Fixed overflow issues and added scroll bars

--- a/frontend/src/main/frontend/src/components/styles/CourseBar.css
+++ b/frontend/src/main/frontend/src/components/styles/CourseBar.css
@@ -7,6 +7,30 @@
     margin: 15% 10% 12% 10%;
 }
 
+.cbc-courses {
+    overflow-y:scroll;
+    height: 70vh;
+}
+
+.cbc-courses::-webkit-scrollbar {
+    width: 20px;
+}
+
+.cbc-courses::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+.cbc-courses::-webkit-scrollbar-thumb {
+    background-color: #d6dee1;
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+}
+
+.cbc-courses::-webkit-scrollbar-thumb:hover {
+    background-color: #a8bbbf;
+}
+
 .TheTable{
     background-color: rgba(255, 255, 255, 0.25);
 }
