--- a/frontend/src/main/frontend/src/pages/StudentPages/styles/StudentCourseStyle.css
+++ b/frontend/src/main/frontend/src/pages/StudentPages/styles/StudentCourseStyle.css
@@ -16,6 +16,8 @@
     flex-grow: 1;
     display: flex;
     flex-direction: row;
+    height: 90vh;
+    width: 100vw;
 }
 
 .scp-component {
@@ -23,6 +25,26 @@
     flex-grow: 1;
     padding: 2%;
     background-color: rgba(255, 255, 255, 0.5);
+    overflow-y: scroll;
+}
+
+.scp-component::-webkit-scrollbar {
+    width: 20px;
+}
+
+.scp-component::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+.scp-component::-webkit-scrollbar-thumb {
+    background-color: #d6dee1;
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+}
+
+.scp-component::-webkit-scrollbar-thumb:hover {
+    background-color: #a8bbbf;
 }
 
 .scp-component-links {
