--- a/frontend/src/main/frontend/src/pages/TeacherPages/styles/ProfessorDashboardStyle.css
+++ b/frontend/src/main/frontend/src/pages/TeacherPages/styles/ProfessorDashboardStyle.css
@@ -12,6 +12,32 @@
     margin-right: 5%;
     margin-left: 5%;
     flex-grow: 1;
+    height: 90vh;
+    width: 100vw;
+}
+
+#proCourseList {
+    overflow-y: scroll;
+    height: 65vh;
+}
+
+#proCourseList::-webkit-scrollbar {
+    width: 20px;
+}
+
+#proCourseList::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+#proCourseList::-webkit-scrollbar-thumb {
+    background-color: #d6dee1;
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+}
+
+#proCourseList::-webkit-scrollbar-thumb:hover {
+    background-color: #a8bbbf;
 }
 
 #addClass {
